python/testData/inspections/importFromModule/foo/bar.py
<error descr="Unresolved reference 'baz'">baz</error>.quux()